[feat] stories, code refactoring etc.
