# Aethera.Infrastructure/Persistence/ApplicationDbContext.cs
@@ -3,6 +3,7 @@ using Aethera.Domain.Entities.Basic;
 using Aethera.Domain.Entities.Characters;
 using Aethera.Domain.Entities.Items;
 using Aethera.Domain.Entities.Settlements;
+using Aethera.Domain.Entities.Stories;
 using Aethera.Domain.Entities.Users;
 using Aethera.Infrastructure.Entities;
 using Microsoft.EntityFrameworkCore;
@@ -16,7 +17,7 @@ namespace Aethera.Infrastructure.Persistence
     public class ApplicationDbContext(DbContextOptions<ApplicationDbContext> options) : DbContext(options)
     {
         // -- Characters --
-        public DbSet<CharacterEntity> CharacterEntities { get; set; }
+        public DbSet<Character> Characters { get; set; }
         public DbSet<CharacterTranslationEntity> CharacterTranslationEntities { get; set; }
         public DbSet<Dynasty> Dynasties { get; set; }
         public DbSet<DynastyTranslationEntity> DynastyTranslationEntities { get; set; }
@@ -45,24 +46,37 @@ namespace Aethera.Infrastructure.Persistence
         // -- Users --
         public DbSet<User> Users { get; set; }
 
+        // -- Stories --
+        public DbSet<Story> Stories { get; set; }
+
         protected override void OnModelCreating(ModelBuilder modelBuilder)
         {
             base.OnModelCreating(modelBuilder);
 
             // -- Characters --
-            modelBuilder.Entity<CharacterEntity>(entity =>
+            modelBuilder.Entity<Character>(entity =>
             {
                 entity.ToTable("Characters");
                 entity.HasKey(e => e.Id);
                 entity.Property(e => e.Id)
                     .HasDefaultValueSql("gen_random_uuid()");
+
+                entity.Property(e => e.Name)
+                    .UsePropertyAccessMode(PropertyAccessMode.Field);
+                entity.Property(e => e.Feats)
+                    .UsePropertyAccessMode(PropertyAccessMode.Field);
+                entity.Property(e => e.Backstory)
+                    .UsePropertyAccessMode(PropertyAccessMode.Field);
+                entity.Property(e => e.Personality)
+                    .UsePropertyAccessMode(PropertyAccessMode.Field);
+
                 entity.OwnsOne(e => e.HP, hp =>
                 {
                     hp.Property(p => p.Current).HasColumnName("HP_Current");
                     hp.Property(p => p.Max).HasColumnName("HP_Maximum");
                     hp.Property(p => p.Temp).HasColumnName("HP_Temporary");
                 });
-                entity.OwnsOne(e=>e.HitDice, hd =>
+                entity.OwnsOne(e => e.HitDice, hd =>
                 {
                     hd.Property(p => p.Sides).HasColumnName("HitDice_DiceSides");
                 });
@@ -90,6 +104,7 @@ namespace Aethera.Infrastructure.Persistence
                 {
                     attr.Property(p => p.Score).HasColumnName("Charisma_Score");
                 });
+
                 entity.HasOne<Dynasty>()
                       .WithMany()
                       .HasForeignKey(e => e.DynastyId)
@@ -98,49 +113,50 @@ namespace Aethera.Infrastructure.Persistence
                       .WithMany()
                       .HasForeignKey(e => e.HometownId)
                       .OnDelete(DeleteBehavior.SetNull);
-                entity.HasOne<CharacterEntity>()
+                entity.HasOne<Character>()
                       .WithMany()
                       .HasForeignKey(e => e.FatherId)
                       .OnDelete(DeleteBehavior.SetNull);
-                entity.HasOne<CharacterEntity>()
+                entity.HasOne<Character>()
                       .WithMany()
                       .HasForeignKey(e => e.MotherId)
                       .OnDelete(DeleteBehavior.SetNull);
 
                 entity.HasMany(c => c.Spells)
-                .WithMany()
-                .UsingEntity<Dictionary<string, object>>(
-                    "CharacterSpells",
-                    j => j.HasOne<Spell>().WithMany().HasForeignKey("SpellId"),
-                    j => j.HasOne<CharacterEntity>().WithMany().HasForeignKey("CharacterId"));
+                    .WithMany()
+                    .UsingEntity<Dictionary<string, object>>(
+                        "CharacterSpells",
+                        j => j.HasOne<Spell>().WithMany().HasForeignKey("SpellId"),
+                        j => j.HasOne<Character>().WithMany().HasForeignKey("CharacterId"));
 
                 entity.HasMany(c => c.Weapons)
-                .WithMany()
-                .UsingEntity<Dictionary<string, object>>(
-                    "CharacterWeapons",
-                    j => j.HasOne<Weapon>().WithMany().HasForeignKey("WeaponId"),
-                    j => j.HasOne<CharacterEntity>().WithMany().HasForeignKey("CharacterId"));
+                    .WithMany()
+                    .UsingEntity<Dictionary<string, object>>(
+                        "CharacterWeapons",
+                        j => j.HasOne<Weapon>().WithMany().HasForeignKey("WeaponId"),
+                        j => j.HasOne<Character>().WithMany().HasForeignKey("CharacterId"));
 
                 entity.HasMany(c => c.Armors)
-                .WithMany()
-                .UsingEntity<Dictionary<string, object>>(
-                    "CharacterArmors",
-                    j => j.HasOne<Armor>().WithMany().HasForeignKey("ArmorId"),
-                    j => j.HasOne<CharacterEntity>().WithMany().HasForeignKey("CharacterId"));
+                    .WithMany()
+                    .UsingEntity<Dictionary<string, object>>(
+                        "CharacterArmors",
+                        j => j.HasOne<Armor>().WithMany().HasForeignKey("ArmorId"),
+                        j => j.HasOne<Character>().WithMany().HasForeignKey("CharacterId"));
 
                 entity.HasMany(c => c.Equipments)
-                .WithMany()
-                .UsingEntity<Dictionary<string, object>>(
-                    "CharacterEquipments",
-                    j => j.HasOne<Equipment>().WithMany().HasForeignKey("EquipmentId"),
-                    j => j.HasOne<CharacterEntity>().WithMany().HasForeignKey("CharacterId"));
+                    .WithMany()
+                    .UsingEntity<Dictionary<string, object>>(
+                        "CharacterEquipments",
+                        j => j.HasOne<Equipment>().WithMany().HasForeignKey("EquipmentId"),
+                        j => j.HasOne<Character>().WithMany().HasForeignKey("CharacterId"));
 
                 entity.HasMany(c => c.Items)
-                .WithMany()
-                .UsingEntity<Dictionary<string, object>>(
-                    "CharacterItems",
-                    j => j.HasOne<Item>().WithMany().HasForeignKey("ItemId"),
-                    j => j.HasOne<CharacterEntity>().WithMany().HasForeignKey("CharacterId"));
+                    .WithMany()
+                    .UsingEntity<Dictionary<string, object>>(
+                        "CharacterItems",
+                        j => j.HasOne<Item>().WithMany().HasForeignKey("ItemId"),
+                        j => j.HasOne<Character>().WithMany().HasForeignKey("CharacterId"));
+
                 entity.Navigation(c => c.Spells).UsePropertyAccessMode(PropertyAccessMode.Field);
                 entity.Navigation(c => c.Weapons).UsePropertyAccessMode(PropertyAccessMode.Field);
                 entity.Navigation(c => c.Armors).UsePropertyAccessMode(PropertyAccessMode.Field);
@@ -154,7 +170,9 @@ namespace Aethera.Infrastructure.Persistence
                        .HasMaxLength(500)
                        .IsRequired(false);
                 });
-                entity.HasMany(e => e.Translations).WithOne()
+
+                entity.HasMany<CharacterTranslationEntity>()
+                      .WithOne()
                       .HasForeignKey(e => e.CharacterId)
                       .OnDelete(DeleteBehavior.Cascade);
             });
@@ -268,7 +286,7 @@ namespace Aethera.Infrastructure.Persistence
                       .HasValue<City>("City")
                       .HasValue<Castle>("Castle")
                       .HasValue<Village>("Village");
-                entity.HasOne<CharacterEntity>()
+                entity.HasOne<Character>()
                       .WithMany()
                       .HasForeignKey(e => e.RulerId)
                       .OnDelete(DeleteBehavior.SetNull);
@@ -308,7 +326,7 @@ namespace Aethera.Infrastructure.Persistence
                     .HasValue<Country>("Country")
                     .HasValue<Province>("Province")
                     .HasValue<Region>("Region");
-                entity.HasOne<CharacterEntity>()
+                entity.HasOne<Character>()
                       .WithMany()
                       .HasForeignKey(e => e.RulerId)
                       .OnDelete(DeleteBehavior.SetNull);
@@ -325,6 +343,25 @@ namespace Aethera.Infrastructure.Persistence
                 entity.Property(e => e.Username).IsRequired().HasMaxLength(100);
                 entity.Property(e => e.PasswordHash).IsRequired();
                 entity.HasIndex(e => e.Username).IsUnique();
+            });
+
+            // -- Stories --
+            modelBuilder.Entity<Story>(entity =>
+            {
+                entity.HasKey(e => e.Id);
+                entity.Property(e => e.Title).HasMaxLength(200).IsRequired();
+                entity.Property(e => e.Content).HasColumnType("text").IsRequired();
+                entity.HasOne<User>()
+                      .WithMany()
+                      .HasForeignKey(e => e.AuthorId)
+                      .OnDelete(DeleteBehavior.SetNull);
+                entity.OwnsOne(c => c.Art, art =>
+                {
+                    art.Property(a => a.FilePath)
+                       .HasColumnName("Art_FilePath")
+                       .HasMaxLength(500)
+                       .IsRequired(false);
+                });
             });
         }
     }
